# MicaCraft

./: .gitignore  gradle.properties
common/src/main/java/dev/ultreon/mods/micacraft/: Acrylic.java  MicaCraft.java
common/src/main/java/dev/ultreon/mods/micacraft/mixin/common/: DwmSystemBackdropType.java  GLFWMixin.java  MinecraftMixin.java  PanoramaRendererMixin.java  ScreenMixin.java
common/src/main/resources/: micacraft-common.mixins.json
fabric/src/main/java/dev/ultreon/mods/micacraft/fabric/: MicaCraftFabric.java
fabric/src/main/resources/: fabric.mod.json  micacraft.mixins.json
forge/src/main/java/dev/ultreon/mods/micacraft/forge/: MicaCraftForge.java
forge/src/main/resources/: pack.mcmeta
libacrylic/: Cargo.toml
libacrylic/src/: lib.rs
